--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -184,11 +184,11 @@ Report <- if (is.null(outputList)) {
 }
 writeLines(Report)
 
+# the scales::alpha argument can make the polygon colour transparent
 areaMapNBNW <- areaMap+
-           geom_sf(data=outputList$mapPoly,fill="red",col="black")
+           geom_sf(data=outputList$mapPoly,fill=scales::alpha("red",0.5),col="black")
 regionMapNBNW <- regionMap+
              geom_sf(data=outputList$regionPoly,fill="red",col="black")
-
 
 
   # NBNW<-intersect_NBNW_overlap(NBNW_ImpHab_sf, studyArea)
