--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -25,8 +25,8 @@ knitr::kable(table_RV, align="l",
 #### ***Résultats des enquêtes sur les navires de recherche dans les Maritimes, par zone***
 
 ```{r RV-results, include=FALSE, cache=FALSE}
-outputList <- master_intersect(RVCatch_sf, region, studyArea, speciestable = RVGSSPECIES,
-                               mapBbox = bboxMap, Year = minYear)
+  outputList <- master_intersect(RVCatch_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
+
 
 Samples_bbox <- outputList$mapPoints
 
@@ -90,9 +90,9 @@ Niveau de sécurité : Protégé B
 Le Système d’information sur les pêches des Maritimes (SIPMAR) est une base de données du MPO, gérée par la Direction des politiques et des études économiques. Le SIPMAR contient des renseignements sur les prises et les efforts, les quotas et les permis pour la région des Maritimes. Les renseignements consignés pour toutes les pêches commerciales qui se déroulent dans cette région sont associés à ces données. Si un navire commercial de la région des Maritimes fait des débarquements dans une autre région du MPO ou à l’extérieur des eaux canadiennes, l’information n’est pas incluse dans la base de données du SIPMAR, peu importe si le navire provient de la région des Maritimes. La majorité des renseignements sur les prises sont liés au déchargement commercial (p. ex. les programmes de contrôle à quai). Les renseignements déclarés dans le SIPMAR ne sont pas considérés comme spatialement ou temporellement synoptiques et, par conséquent, il est fortement recommandé d’intégrer des renseignements supplémentaires sur la présence et/ou l’utilisation de l’habitat (c.-à-d. frai, migration, alimentation) provenant d’études à plus grande échelle. Les données sur les rejets et les registres de données sur les espèces en péril sont également plus limitées, car les dossiers sur les prises ne comportent pas tous les coordonnées géographiques (latitude et longitude) associées ou des renseignements sur l’effort de pêche. Cependant, en général, tous les dossiers sont associés à une division de l’OPANO et à une zone unitaire de l’OPANO, même si aucune coordonnée n’a été fournie. Les données de production (moins de quatre ans) sont considérées comme préliminaires et peuvent être modifiées sans préavis. Des changements aux données archivées (plus de quatre ans) peuvent également se produire, mais ils sont généralement limités. Le travail de contrôle et d’assurance de la qualité est en cours dans la base de données du SIPMAR, mais les erreurs ne sont pas toutes corrigées. Si vous avez des erreurs à signaler, des questions ou des demandes de correction de données, vous pouvez les envoyer à notre boîte de réception de la qualité des données : CDDDataQuality@dfo-mpo.gc.ca. Cette information sur le SIPMAR a été fournie par Colin.O’Neil@dfo-mpo.gc.ca (juillet 2020, Direction des politiques et des études économiques). Si vous souhaitez inclure des données d’observateurs dans une publication, n’oubliez pas de les agréger (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r).
 
 #### ***Résultats de recherche du SIPMAR et de la BDRI par zone***
-```{r, include=FALSE, cache=FALSE}
-outputListI <- main_intersect(isdb_sf, studyArea, Bbox = bboxMap, Year = minYear)
-outputListM <- main_intersect(marfis_sf, studyArea, Bbox = bboxMap, Year = minYear)
+```{r marfis-isdb-results, include=FALSE, cache=FALSE}
+outputListI <- master_intersect(isdb_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
+outputListM <- master_intersect(marfis_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
 Samples_bboxI <- outputListI[[3]]
 Samples_bboxM <- outputListM[[3]]
 
@@ -110,7 +110,7 @@ if (!is.null(outputListM)) {
 }
 ```
 *
-```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_isdb <- if (is.null(outputListI)) {
     "Il n’y a aucun registre pertinent dans la base de données des relevés de l’industrie (BDRI) pour cette zone de recherche."
   } else {
@@ -121,7 +121,7 @@ writeLines(Report_isdb)
 ```
 
 *
-```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_marfis <- if (is.null(outputListM)) {
     "Il n’y a aucun registre pertinent dans le Système d’information sur les pêches des Maritimes (SIPMAR) pour cette zone de recherche."
   } else {
@@ -131,7 +131,7 @@ Report_marfis<-noquote(Report_marfis)
 writeLines(Report_marfis)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) utilisée pour demander des renseignements agrégés provenant des dossiers d’observation du Système d’information sur les pêches des Maritimes (SIPMAR) et/ou de la Base de données des relevés de l’industrie (BDRI), qui sont présentés sous forme de points noirs, pour toutes les espèces. La règle des cinq n’a pas été appliquée.'}
+```{r marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) utilisée pour demander des renseignements agrégés provenant des dossiers d’observation du Système d’information sur les pêches des Maritimes (SIPMAR) et/ou de la Base de données des relevés de l’industrie (BDRI), qui sont présentés sous forme de points noirs, pour toutes les espèces. La règle des cinq n’a pas été appliquée.'}
 if (!is.null(outputListI) & !is.null(outputListM)) {
   areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black") + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 } else if (!is.null(outputListI)) {
@@ -140,22 +140,22 @@ if (!is.null(outputListI) & !is.null(outputListM)) {
         areaMap + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 }
 ```
-```{r}
+```{r isdb-SAR-table}
 if (!is.null(outputListI)) {
 knitr::kable(table_isdb2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>TSi une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
-```{r}
+```{r isdb-all-table}
 if (!is.null(outputListI)) {
   knitr::kable(table_isdb1, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
-```{r}
+```{r marfis-SAR-table}
 if (!is.null(outputListM)) {
   knitr::kable(table_mar2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
-```{r}
+```{r marfis-all-table}
 if (!is.null(outputListM)) {
   knitr::kable(table_mar1, caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
@@ -172,8 +172,8 @@ Le SIBO est un centre mondial de données et d’information en libre accès sur
 
 #### ***Résultats de recherche du SIBO sur les poissons et les invertébrés par zone***
 
-```{r, include=FALSE, cache=FALSE}
-outputList <- main_intersect(obis_fish_sf, studyArea, Bbox = bboxMap, Year = minYear)
+```{r obis-results, include=FALSE, cache=FALSE}
+outputList <- master_intersect(obis_fish_sf, studyArea, Bbox = bboxMap, Year = minYear)
 Samples_bbox <- outputList[[3]]
 
 if (!is.null(outputList)) {
@@ -182,7 +182,7 @@ if (!is.null(outputList)) {
 }
 ```
 *
-```{r, echo=FALSE, results='asis',}
+```{r obis-check, echo=FALSE, results='asis',}
 Report_obis <- if (is.null(outputList)) {
   "Il n’y a aucun registre pertinent dans le système d’information sur la biodiversité des océans (SIB)O pour cette zone de recherche."
 } else {
@@ -191,14 +191,14 @@ Report_obis <- if (is.null(outputList)) {
 Report_obis<-noquote(Report_obis)
 writeLines(Report_obis)
 ```
-```{r, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) a été utilisée pour rechercher des informations dans les registres d’observation du SIBO sur les espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>'}
+```{r obis-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) a été utilisée pour rechercher des informations dans les registres d’observation du SIBO sur les espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). Les observations sur terre indiquent que les données d’observation n’ont pas encore été complètement vérifiées ou que des animaux ont été observés depuis la côte. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>'}
 if (!is.null(outputList)) {
   areaMap +
     geom_point(data = Samples_bbox, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 }
 ```
-```{r echo=FALSE, results='asis', caption="
-Les espèces prioritaires avec des observations contenues dans la base de données du SIBO, dans la zone de recherche."}
+
+```{r obis-table, echo=FALSE, results='asis', caption="Les espèces prioritaires avec des observations contenues dans la base de données du SIBO, dans la zone de recherche."}
 if (!is.null(outputList)) {
   knitr::kable(table_obis1, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Registres d’observation du système d’information sur la biodiversité des océans (SIBO) des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
